# rockquant

./: .gitignore  pyproject.toml
federated/: config.json  search.py
rockquant/db/: migrate.py
rockquant/db/migrations/: 001_init.sql  002_signals.sql
rockquant/qa/: checks.py  exports.py
rockquant/sources/doe_edf/: classify.py  pipeline.py  signals.py
rockquant/sources/fast41/: __init__.py  classify.py  signals.py
