[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rockquant"
version = "0.0.1"
description = "RockQuant pipeline"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "beautifulsoup4",
  "pandas",
]

[tool.setuptools]
packages = ["rockquant"]
